workloads/routing/location/base/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: location-vs
  namespace: location
spec:
  hosts:
  - api.growbin.app
  gateways:
  - istio-system/eco2-gateway
  http:
  - match:
    - uri:
        prefix: /api/v1/location
    route:
    - destination:
        host: location-api.location.svc.cluster.local
        port:
          number: 8000
